--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 # Interface
-streamlit==1.31.1
+streamlit==1.30.0
 plotly==5.18.0
 
 # Processamento de dados
-pandas==2.2.0
+pandas==2.1.1
 numpy==1.26.3
 openpyxl==3.1.2
 
 # Processamento de arquivos bancários
-ofxparse==0.20
+ofxparse==0.21
+ofxtools==0.9.5
 
 # Geração de relatórios
-reportlab==4.0.9
+reportlab==4.0.5
 
 # Utilitários
 python-dateutil==2.8.2
